# cc-gw2

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  cc-gw.pen  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
crates/cc-gw-core/: Cargo.toml
crates/cc-gw-core/src/: api_keys.rs  config.rs  convert.rs  events.rs  lib.rs  models.rs  observability.rs  profiler.rs  provider.rs  routing.rs  storage.rs  stream.rs  ui.rs
crates/cc-gw-server/: Cargo.toml
crates/cc-gw-server/src/: admin_routes.rs  auth.rs  auth_routes.rs  main.rs  profiler_routes.rs  proxy_routes.rs  tests.rs  ui_routes.rs  web_middleware.rs
docs/: README.md  api-compatibility.md  api-key-max-concurrency.md  backend-migration-plan.md  database-schema.md  demo-script.md  execution-todo.md  frontend-redesign-development-plan.md  frontend-redesign-final-audit.md  frontend-redesign-implementation-map.md  frontend-redesign-pencil-board-index.md  frontend-redesign-pencil-handoff.md  frontend-redesign-requirements.md  frontend-redesign-todo.md  frontend-redesign-webui-vs-cc-gw-pen-audit.md  github-release-checklist.md  landing-publishing.md  launch-copy.md  media-kit.md  npm-packaging.md  product-positioning.md  system-design.md
docs/assets/readme/: console-showcase.html
docs/superpowers/plans/: 2026-04-02-dashboard-spotlight-layout.md
docs/superpowers/specs/: 2026-04-02-dashboard-spotlight-layout-design.md
scripts/: bundle-native-binary.mjs  capture-compare-pen-screenshots.mjs  capture-readme-screenshots.mjs  native-targets.mjs  npm-dist-tag.mjs  pack-root-package.mjs  prepare-native-package.mjs  publish-artifacts.mjs  smoke-cli.mjs  sync-native-versions.mjs
src/cli/: index.ts  package.json  tsconfig.json
src/web/: index.html  landing.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/web/public/: site.webmanifest
src/web/src/: App.tsx  main.tsx
src/web/src/app/: RequireAuth.tsx  queryClient.ts  router.tsx  routes.tsx
src/web/src/components/: BrandMark.tsx  ConfirmDialog.tsx  DialogShell.tsx  EChart.tsx  LanguageSwitcher.tsx  Loader.tsx  (+6 more)
tests/playwright/: api-keys.spec.ts  auth.spec.ts  dashboard.spec.ts  events.spec.ts  hardening.spec.ts  harness.ts  landing.spec.ts  logs.spec.ts  model-management.spec.ts  pages.spec.ts  profiler.spec.ts  settings.spec.ts  visual.spec.ts
(+92 files in other folders)
