[workspace]
members = [
  "crates/cc-gw-core",
  "crates/cc-gw-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.8.11"

[workspace.dependencies]
anyhow = "1.0"
async-stream = "0.3"
brotli = "7.0"
aes-gcm = "0.10"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
futures-util = "0.3"
indexmap = { version = "2.7", features = ["serde"] }
mime_guess = "2.0"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.33", features = ["bundled"] }
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
sha2 = "0.10"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = "0.37"
zip = { version = "4.6", default-features = false, features = ["deflate"] }
