[package]
name = "cc-gw-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-stream.workspace = true
base64.workspace = true
brotli.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util.workspace = true
indexmap.workspace = true
mime_guess.workspace = true
rand.workspace = true
regex = "1.11"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
